# Changelog
# $Id$
dd-mm-yy - Version 5.1.38

  - Fix for Bug#56122 (11763419), JDBC4 functionality failure when using replication connections.

  - Added support for TLSv1.1 and TLSv1.2

  - Fix for Bug#78961 (22096981), Can't call MySQL procedure with InOut parameters in Fabric environment.

  - Fix for Bug#56100 (11763401), Replication driver routes DML statements to read-only slaves.

  - StandardSSLSocketFactory implements SocketMetadata.

  - Fix for Bug#21978216, GETTYPEINFO REPORT MAXIMUM PRECISION OF 255 FOR VARBINARY.

  - Fix for Bug#78706 (21947042), Prefer TLS where supported by MySQL Server.

  - Fix for Bug#21934573, FABRIC CODE INVOLVED IN THREAD DEADLOCK.
    Duplicate: Bug#78710 (21966391), Deadlock on ReplicationConnection and ReplicationConnectionGroup when failover.

10-15-15 - Version 5.1.37

  - Fix for Bug#21876798, CONNECTOR/J WITH MYSQL FABRIC AND SPRING PRODUCES PROXY ERROR.

  - Fix for Bug#76859 (20969312), DBMD getColumns using I_S doesn't have column IS_GENERATEDCOLUMN as per JDBC 4.1.
    Added support for GENERATED COLUMNS.

  - Update Time Zone mappings with IANA Time Zone database tsdata2015f and Unicode CLDR v.28.

  - Update DatabaseMetaData SQL keywords.

  - Added tests for Optimizer hints syntax introduced in MySQL 5.7.7.

  - Fix for Bug#21860833, JSON DATA TYPE DOESN'T WORK WITH SSPS.
    Added support for JSON data type.

  - Added support for JDBC 4.2 new features.
    New property 'enableEscapeProcessing' sets the default escape processing behavior for Statement objects.

  - Fix for Bug#16634180, LOCK WAIT TIMEOUT EXCEEDED CAUSES SQLEXCEPTION, SHOULD CAUSE SQLTRANSIENTEXCEPTION

  - Fix for Bug#75849 (20536592), NPE in abortInternal() method on line 1358 of ConnectionImpl.

  - Fix for Bug#78106 (21648826), Potential memory leak with inflater.

  - Fix for Bug#78225 (21697684), DEFAULT NO_AUTO_CREATE_USER SQL_MODE BEHAVIOR BROKE SOME TESTS

  - Fix for Bug#77665 (21415165), JDBC fails to connect with MySQL 5.0.
